--- a/index.html
+++ b/index.html
@@ -10,12 +10,25 @@
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css"
         integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Rosie</title>
 </head>
 
 <body>
     <header>
+        <div class="row">
+            <a href="index.html" class="col-md-4 logo">
 
+            </a>
+            <div class="col-md-8">
+                <div class="row bg-color-name-title">
+                    <div class="col heading">
+                        <h1 class="name">Rosie Odenkirk</h1>
+                        <h2 class="title">Full Stack Developer</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <section>
 
